Remove unused code and temporarily disable tests