@@ -1,19 +1,17 @@
 package net.whydah.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-import java.io.IOException;
+import java.util.Base64;
 
 public class StringXORer {
-    public String encode(String s, String key) {
+    public static String encode(String s, String key) {
         return base64Encode(xorWithKey(s.getBytes(), key.getBytes()));
     }
 
-    public String decode(String s, String key) {
+    public static String decode(String s, String key) {
         return new String(xorWithKey(base64Decode(s), key.getBytes()));
     }
 
-    private byte[] xorWithKey(byte[] a, byte[] key) {
+    private static byte[] xorWithKey(byte[] a, byte[] key) {
         byte[] out = new byte[a.length];
         for (int i = 0; i < a.length; i++) {
             out[i] = (byte) (a[i] ^ key[i%key.length]);
@@ -21,16 +19,18 @@ public class StringXORer {
         return out;
     }
 
-    private byte[] base64Decode(String s) {
+    private static byte[] base64Decode(String s) {
         try {
-            BASE64Decoder d = new BASE64Decoder();
-            return d.decodeBuffer(s);
-        } catch (IOException e) {throw new RuntimeException(e);}
+            return Base64.getDecoder().decode(s);
+        } catch (IllegalArgumentException e) {
+            throw new RuntimeException(e);
+        }
     }
 
-    private String base64Encode(byte[] bytes) {
-        BASE64Encoder enc = new BASE64Encoder();
-        return enc.encode(bytes).replaceAll("\\s", "");
-
+    private static String base64Encode(byte[] bytes) {
+        return Base64.getEncoder()
+                .encode(bytes)
+                .toString()
+                .replaceAll("\\s", "");
     }
 }
